# mastodon

./: .gitignore  Cargo.toml
src/: json.rs  lib.rs  main.rs
