[package]
name = "mastodon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json", "blocking", "multipart"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
